--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
                     <img src="img/about.jpg" class="rounded" height="400px" width="300px" data-aos="zoom-in" data-aos-duration="1000" alt="image">
                 </div>
                 <div class="col-md-8 justify-content-center align-items-center pt-5">
-                    <p class="text-dark  h3" data-aos="slide-left" data-aos-duration="1000">I'm Atik and i am a <span class="text-danger">web developer</span></p>
+                    <p class="text-dark  h3" data-aos="slide-left" data-aos-duration="1000">I'm Atik and i am a <span class="text-danger">full stack web developer</span></p>
                     <p class="text-justify" data-aos="slide-left" data-aos-duration="1000">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex incidunt enim amet magni magnam provident tenetur, in adipisci veniam obcaecati quas quia tempore modi, qui, molestias a perferendis hic impedit!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis aperiam voluptatum aut animi alias dignissimos, maxime magni commodi voluptas quidem repellat eius doloribus autem accusamus labore assumenda illo excepturi. Doloremque?
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde mollitia rerum exercitationem explicabo dolorum aspernatur sequi voluptas minus pariatur beatae ea, reprehenderit, soluta modi, fugit dignissimos quas. Placeat voluptatem, ad.
+                        and i am from Bangladesh. I currently live in Munshiganj, Bangladesh. I finished my honours (B.sc) in Computer Science and Engineering. I am now learning and trying to be a full stack web developer. I have great interest in coding, playing Football, travelling and anything that is creative.Thank you so much for visiting my profile. I am looking for a full time job. Feel free to contact me if you like my profile.
                     </p>
                     <a href="src/cv.html" class="btn btn-success" data-aos="slide-up" data-aos-duration="1000" data-aos-mirror="true">Download CV</a>
                 </div>
@@ -123,8 +121,7 @@
                             HTML5 and CSS3
                         </div>
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Iusto est incidunt reprehenderit totam consequuntur earum officiis sapiente inventore hic velit.
+                            HTML5 is a markup language used for structuring and presenting content on the World Wide Web. It is the fifth and last major HTML version that is a World Wide Web Consortium recommendation.
                         </div>
                     </div>
                 </div>
@@ -137,8 +134,7 @@
                             Bootstrap 4
                         </div>
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Iusto est incidunt reprehenderit totam consequuntur earum officiis sapiente inventore hic velit.
+                            Get started with Bootstrap, the world’s most popular framework for building responsive, mobile-first sites, with BootstrapCDN and a template starter page.
                         </div>
                     </div>
                 </div>
@@ -151,8 +147,7 @@
                             Django
                         </div>
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Iusto est incidunt reprehenderit totam consequuntur earum officiis sapiente inventore hic velit.
+                            Django is a Python-based free and open-source web framework that follows the model–template–views architectural pattern.
                         </div>
                     </div>
                 </div>
@@ -165,8 +160,7 @@
                             Python3
                         </div>
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Iusto est incidunt reprehenderit totam consequuntur earum officiis sapiente inventore hic velit.
+                            Python is an interpreted high-level general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation
                         </div>
                     </div>
                 </div>
@@ -189,8 +183,7 @@
                     <div class="sktext" data-aos="slide-right" data-aos-duration="1000">
                         <p class="h3 ">My skills and experiences</p>
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero voluptas nihil distinctio, aliquid molestias accusamus sequi molestiae omnis odio fuga, illo cupiditate. Eos amet eius ullam pariatur reprehenderit recusandae cumque.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dolore. Explicabo voluptatem quia laudantium et sapiente suscipit architecto numquam expedita corrupti ullam minima sunt, dolore illum praesentium, obcaecati itaque, soluta?
+                            Self-confidence, self-motivation, leadership capabilities, ability to manage time and being flexible. Open minded in adapting to new challenging situations. Able to work in time and maintain effective communication.
                         </p>
                         <a href="#" class="btn btn-success" data-aos="slide-up" data-aos-duration="1000">Read more..</a>
                     </div>
@@ -272,45 +265,7 @@
 
             </div>
 
-            <div class="row py-3 text-light">
-                <div class="col-md-3">
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" data-aos="slide-down" data-aos-duration="1000">
-                        <div class="card-header text-center"><img src="img/teams/s.jpg" class="rounded-circle" height="150px" width="150px" alt=""></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Mirja Shaiful Islam</h5>
-                            <p class="card-text h6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" data-aos="slide-up" data-aos-duration="1000">
-                        <div class="card-header text-center"><img src="img/teams/b.jpg" class="rounded-circle" height="150px" width="150px" alt=""></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Imam Hossain</h5>
-                            <p class="card-text h6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" data-aos="slide-down" data-aos-duration="1000">
-                        <div class="card-header text-center"><img src="img/teams/n.jpg" class="rounded-circle" height="150px" width="150px" alt=""></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Naimur Rahman</h5>
-                            <p class="card-text h6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" data-aos="slide-up" data-aos-duration="1000">
-                        <div class="card-header text-center"><img src="img/teams/r2.jpg" class="rounded-circle" height="150px" width="150px" alt=""></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Md Ruman ahmmed</h5>
-                            <p class="card-text h6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
 
-            </div>
         </div>
     </section>
 
@@ -327,7 +282,7 @@
                 <div class="col-md-6 text-light">
                     <p class="h3">get in touch</p>
                     <p class="text-justify">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, blanditiis quod nulla distinctio fugiat quos tenetur architecto ea officiis quasi ratione cupiditate esse veritatis, facere deleniti voluptatem, similique. Aliquid, cum.
+                        Feel free to get in touch with me. I am always open to discussing new projects. creative ideas or opportunities to be part of your visions 
                     </p>
                     <div class="address">
                         <table class="table">
@@ -340,7 +295,7 @@
                                 <td data-aos="slide-right" data-aos-duration="1000"><span style="font-size: 25px;"><i class="fas fa-map-marker-alt"></i></span> <span class="h4">Address </span><br><span class=" ">Dhaka,Bangladesh</span></td>
                             </tr>
                             <tr>
-                                <td data-aos="slide-right" data-aos-duration="1000"><span style="font-size: 25px;"><i class="fas fa-envelope"></i></span> <span class="h4">Contact </span><br><span class=" ">blackandblue528@gmail.com</span></td>
+                                <td data-aos="slide-right" data-aos-duration="1000"><span style="font-size: 25px;"><i class="fas fa-envelope"></i></span> <span class="h4">Contact </span><br><span class=" ">mdatikurr355@gmail.com</span></td>
                             </tr>
                         </table>
                     </div>
