--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
             </div>
         </div>
     </nav>
+
     <!-- Home section start -->
     <section class="home " id="home">
+        <div class="alert text-dark alert-warning alert-dismissible fade show" role="alert" data-aos="slide-down" data-aos-duration="1000" data-aos-delay="2000">
+            <strong>Holy Visitors!</strong> I am looking for a full time job. Feel free to contact me if you like my profile.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <div class="container home-content">
             <div class="row">
                 <div class="col-md-6 ">
@@ -282,7 +289,7 @@
                 <div class="col-md-6 text-light">
                     <p class="h3">get in touch</p>
                     <p class="text-justify">
-                        Feel free to get in touch with me. I am always open to discussing new projects. creative ideas or opportunities to be part of your visions 
+                        Feel free to get in touch with me. I am always open to discussing new projects. creative ideas or opportunities to be part of your visions
                     </p>
                     <div class="address">
                         <table class="table">
