--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Home section start -->
     <section class="home " id="home">
         <div class="alert text-dark alert-warning alert-dismissible fade show" role="alert" data-aos="slide-down" data-aos-duration="1000" data-aos-delay="2000">
-            <strong>Holy Visitors!</strong> I am looking for a full time job. Feel free to contact me if you like my profile.
+            <strong>Hello, Visitors!</strong> I am looking for a full time job. Feel free to contact me if you like my profile.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
