--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 d-flex justify-content-center align-items-center  p-5">
-                    <img src="img/myimg.png" class="rounded" height="500px" width="300px" data-aos="zoom-in" data-aos-duration="1000" alt="image">
+                    <img src="img/myimg.jpg" class="rounded" height="450px" width="400px" data-aos="zoom-in" data-aos-duration="1000" alt="image">
                 </div>
             </div>
         </div>
